--- a/python/index.html
+++ b/python/index.html
@@ -103,6 +103,26 @@
               <p>Encrypt and decrypt a text</p>
             </td>
           </tr>
+          <tr id="02-todolist">
+            <td>
+              <img class="example-image" src="/static/img/examples/python/02-todolist.jpg">
+            </td>
+            <td>
+              <a href="/python/08-todolist.html"><h3>To-Do-List, OOP edition</h3></a>
+              <p class="level">Intermediate</p>
+              <p>Create your own To-Do-List, with Object-Oriented Programming</p>
+            </td>
+          </tr>
+          <tr id="02-todolist">
+            <td>
+              <img class="example-image" src="/static/img/examples/python/02-todolist.jpg">
+            </td>
+            <td>
+              <a href="/python/09-todolist.html"><h3>To-Do-List, Better OOP Edition</h3></a>
+              <p class="level">Intermediate</p>
+              <p>Create your own To-Do-List, with better object-oriented  programming</p>
+            </td>
+          </tr>
         </table>
       </div>
     </main>
